mule-user-guide/v/3.3/transports-reference.adoc
= Available Transports

* <<Mule Transports>>
* <<Transport Matrix>>

Following is a list of known transports (also called "providers") for Mule ESB. Some functionality is contained within modules instead of transports--see link:/mule-user-guide/v/3.4/modules-reference[Modules Reference]. For more information on transports, see the following topics:

* link:/mule-user-guide/v/3.4/connecting-using-transports[About Transports]
* link:/mule-user-guide/v/3.4/configuring-a-transport[Configuring a Transport]
* link:/mule-user-guide/v/3.4/creating-transports[Creating Transports]

If you have created a transport for Mule and would like to share it with the Mule community, please mailto:dev@mule.codehaus.org[contact us].

The following list includes some prominent transports from MuleForge (denoted by image:/docs/download/attachments/95393243/ftiny.png?version=1&modificationDate=1374598317696[image,title="Available on MuleForge only"]). Transports that are available only in Mule Enterprise are denoted by *Enterprise Edition*.

== Mule Transports

[width="100%",cols="50%,50%",options="header",]
|===
|Transport |Description
|link:/mule-user-guide/v/3.4/ajax-transport-reference[AJAX Transport] |The Mule AJAX connector allows Mule events to be sent and received asynchronously to and from the web browser
|image:/docs/download/attachments/95393243/ftiny.png?version=1&modificationDate=1374598317696[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/ABDERA/Home[Abdera Transport] |Allows you to easily integrate with Atom feeds and Atom Publishing Protocol servers via the http://incubator.apache.org/abdera[Apache Abdera] project.

|link:/mule-user-guide/v/3.4/ejb-transport-reference[EJB Transport] |Allows EJB invocations to be made using outbound endpoints.
|link:/mule-user-guide/v/3.4/email-transport-reference[Email Transport] |This transport supplies various email connectivity options.
|link:/mule-user-guide/v/3.4/file-transport-reference[File Transport] |This transport allows files to be read and written to directories on the local file system. The connector can be configured to filter the file it reads and the way files are written, such as whether binary output is used or the file is appended to.
|link:/mule-user-guide/v/3.4/ftp-transport-reference[FTP Transport] |Allows files to be read / written to a remote FTP server.
|link:/mule-user-guide/v/3.4/http-transport-reference[HTTP Transport] |This transport supplies HTTP transport of Mule messages between applications and other Mule servers.
|link:/mule-user-guide/v/3.4/https-transport-reference[HTTPS Transport] |A secure version of the HTTP transport.
|link:/mule-user-guide/v/3.4/imap-transport-reference[IMAP Transport] |Connectivity to IMAP mail folders.
|link:/mule-user-guide/v/3.4/imap-transport-reference[IMAPS Transport] |A secure version of the IMAP transport.
|image:/docs/download/attachments/95393243/ftiny.png?version=1&modificationDate=1374598317696[image,title="Available on MuleForge only"] JCR Transport |A transport that reads from, writes to, and observes JCR 1.0 containers. This transport is available on MuleForge.

|link:/mule-user-guide/v/3.4/jdbc-transport-reference[JDBC Transport] +
_*Enterprise Edition*_ |A transport for JDBC connectivity. Some of its features are available only in Mule Enterprise.
|link:/mule-user-guide/v/3.4/jetty-transport-reference[Jetty Transport] |Provides support for exposing services over HTTP by embedding a light-weight Jetty server. For inbound endpoints only.
|link:/mule-user-guide/v/3.4/jetty-ssl-transport[Jetty SSL Transport] |A secure version of the Jetty transport.
|link:/mule-user-guide/v/3.4/jms-transport-reference[JMS Transport] |A Mule transport for JMS connectivity. Mule itself is not a JMS server but can use the services of any JMS 1.1 or 1.02b compliant server such as ActiveMQ and OpenJms, and commercial vendors such as Weblogic, SonicMQ, and more.
|image:/docs/download/attachments/95393243/ftiny.png?version=1&modificationDate=1374598317696[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/LDAP[LDAP Transport] |Allows you to send and receive Mule Messages to/from an LDAP directory.


image:/docs/download/attachments/95393243/ftiny.png?version=1&modificationDate=1374598317696[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/LEGSTAR/Home[Legs4Mule Transport] |Provides transformers and connectors for IBM mainframes.
|link:/mule-user-guide/v/3.4/pop3-transport-reference[POP3 Transport] |Connectivity to POP3 inboxes.
|link:/mule-user-guide/v/3.4/pop3-transport-reference[POP3S Transport] |A secure version of the POP3 transport.
|link:/mule-user-guide/v/3.4/quartz-transport-reference[Quartz Transport] |Provides scheduling facilities with cron / interval definitions and allows Mule events to be scheduled/rescheduled.
|image:/docs/download/attachments/95393243/ftiny.png?version=1&modificationDate=1374598317696[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/RESTLET/Home[Restlet Transport] |Allows you to embed Restlet services inside of Mule, use the Restlet client API over Mule, and use URI templates to route messages inside of Mule.

|link:/mule-user-guide/v/3.4/rmi-transport-reference[RMI Transport] |Enables events to be sent and received over RMI via JRMP.
|link:/mule-user-guide/v/3.4/servlet-transport-reference[Servlet Transport] |Provides facilities for Mule components to listen for events received via a servlet request. There is also a servlet implementation that uses the Servlet transport to enable REST style services access. This transport is now bundled with the HTTP transport.
|link:/mule-user-guide/v/3.4/smtp-transport-reference[SMTP Transport] |Connectivity to SMTP servers.
|link:/mule-user-guide/v/3.4/smtp-transport-reference[SMTPS Transport] |A secure version of the SMTP transport.
|link:/mule-user-guide/v/3.4/ssl-and-tls-transports-reference[SSL Transport] |Provides secure socket-based communication using SSL or TLS.
|link:/mule-user-guide/v/3.4/stdio-transport-reference[STDIO Transport] |This transport provides connectivity to streams such as `System.in` and `System.out` and is useful for testing.
|link:/mule-user-guide/v/3.4/tcp-transport-reference[TCP Transport] |Enables events to be sent and received over TCP sockets.
|link:/mule-user-guide/v/3.4/ssl-and-tls-transports-reference[TLS Transport] |Provides secure socket-based communication using SSL or TLS.
|link:/mule-user-guide/v/3.4/udp-transport-reference[UDP Transport] |Enables events to be sent and received as datagram packets.
|link:/mule-user-guide/v/3.4/vm-transport-reference[VM Transport] |Enables event sending and receiving over VM, embedded memory, or persistent queues.
|link:/mule-user-guide/v/3.4/mule-wmq-transport-reference[WebSphere MQ Transport] +
_*Enterprise Edition*_ |A Mule transport for WebSphere MQ. This transport is available with Mule Enterprise version 1.6 and later.
|link:/mule-user-guide/v/3.4/wsdl-connectors[WSDL Connectors] |The CXF Module allows remote web services to be invoked using their WSDL contract.
|link:/mule-user-guide/v/3.4/xmpp-transport-reference[XMPP Transport] |Provides connectivity over the XMPP (Jabber) instant messaging protocol.
|===

== Transport Matrix

[cols=",,,,,,,,,,",options="header",]
|===
|Transport |Doc |Inbound |Outbound |Request |Transactions |Streaming |Retries |MEPs |Default MEP |Maven Artifact
|http://mule.mulesoft.org/display/MULE3USER/AJAX+Transport+Reference[AJAX] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/ajax/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_ajax/namespace-overview.html[SchemaDoc] |image:check.png[check] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way |one-way |org.mule.http://transportmule-transport-ajax[transport:mule-transport-ajax]

|http://mule.mulesoft.org/display/MULE3USER/Axis+Transport+Reference[Axis] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/axis/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_axis/namespace-overview.html[SchemaDoc]
image:check.png[check] |image:check.png[check] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-axis[transport:mule-transport-axis]

|http://mule.mulesoft.org/display/MULE3USER/File+Transport+Reference[File] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/file/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_file/namespace-overview.html[SchemaDoc]
image:check.png[check] |image:check.png[check] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way |one-way |org.mule.http://transportmule-transport-file[transport:mule-transport-file]

|http://mule.mulesoft.org/display/MULE3USER/ftp-ee+Transport+Reference[ftp-ee] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/ftp-ee/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_ftp-ee/namespace-overview.html[SchemaDoc]
image:check.png[check] |image:check.png[check] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |  |  |org.mule.http://transportmule-transport-ftp-ee[transport:mule-transport-ftp-ee]

|http://mule.mulesoft.org/display/MULE3USER/HTTPS+Transport+Reference[HTTPS] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/http/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_https/namespace-overview.html[SchemaDoc]
image:check.png[check] |image:check.png[check] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-https[transport:mule-transport-https]

|http://mule.mulesoft.org/display/MULE3USER/IMAPS+Transport+Reference[IMAPS] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/email/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_imaps/namespace-overview.html[SchemaDoc]
image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way |one-way |org.mule.http://transportmule-transport-imaps[transport:mule-transport-imaps]

|http://mule.mulesoft.org/display/MULE3USER/jdbc-ee+Transport+Reference[jdbc-ee] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/jdbc-ee/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_jdbc-ee/namespace-overview.html[SchemaDoc]
image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |  |  |org.mule.http://transportmule-transport-jdbc-ee[transport:mule-transport-jdbc-ee]

|http://mule.mulesoft.org/display/MULE3USER/Jetty%20SSL+Transport+Reference[Jetty SSL] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/jetty/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_jetty%20ssl/namespace-overview.html[SchemaDoc]
image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-jetty[transport:mule-transport-jetty] ssl

|http://mule.mulesoft.org/display/MULE3USER/Multicast+Transport+Reference[Multicast] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/multicast/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_multicast/namespace-overview.html[SchemaDoc]
image:check.png[check] |image:check.png[check] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-multicast[transport:mule-transport-multicast]

|http://mule.mulesoft.org/display/MULE3USER/POP3S+Transport+Reference[POP3S] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/email/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3s/namespace-overview.html[SchemaDoc]
image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way |one-way |org.mule.http://transportmule-transport-pop3s[transport:mule-transport-pop3s]

|http://mule.mulesoft.org/display/MULE3USER/RMI+Transport+Reference[RMI] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/rmi/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_rmi/namespace-overview.html[SchemaDoc]
image:check.png[check] |image:check.png[check] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-rmi[transport:mule-transport-rmi]

|http://mule.mulesoft.org/display/MULE3USER/SFTP+Transport+Reference[SFTP] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/sftp/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_sftp/namespace-overview.html[SchemaDoc]
image:check.png[check] |image:check.png[check] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |one-way |org.mule.http://transportmule-transport-sftp[transport:mule-transport-sftp]

|http://mule.mulesoft.org/display/MULE3USER/SMTPS+Transport+Reference[SMTPS] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/email/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_smtps/namespace-overview.html[SchemaDoc]
image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:check.png[check] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way |one-way |org.mule.http://transportmule-transport-smtps[transport:mule-transport-smtps]

|http://mule.mulesoft.org/display/MULE3USER/STDIO+Transport+Reference[STDIO] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/stdio/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_stdio/namespace-overview.html[SchemaDoc]
image:check.png[check] |image:check.png[check] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way |one-way |org.mule.http://transportmule-transport-stdio[transport:mule-transport-stdio]

|http://mule.mulesoft.org/display/MULE3USER/TLS+Transport+Reference[TLS] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/ssl/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_tls/namespace-overview.html[SchemaDoc]
image:check.png[check] |image:check.png[check] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-tls[transport:mule-transport-tls]

|http://mule.mulesoft.org/display/MULE3USER/VM+Transport+Reference[VM] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/vm/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_vm/namespace-overview.html[SchemaDoc]
image:check.png[check] |image:check.png[check] |image:check.png[check] |image:check.png[check](XA) |image:check.png[check] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |one-way |org.mule.http://transportmule-transport-vm[transport:mule-transport-vm]

|===

 Legend

*Transport* - The name/protocol of the transport +
*Docs* - Links to the JavaDoc and SchemaDoc for the transport +
*Inbound* - Whether the transport can receive inbound events and can be used for an inbound endpoint +
*Outbound* - Whether the transport can produce outbound events and be used with an outbound endpoint +
*Request* - Whether this endpoint can be queried directly with a request call (via MuleClinet or the EventContext) +
*Transactions* - Whether transactions are supported by the transport. Transports that support transactions can be configured in either local or distributed two-phase commit (XA) transaction. +
*Streaming* - Whether this transport can process messages that come in on an input stream. This allows for very efficient processing of large data. For more information, see Streaming. +
*Retry* - Whether this transport supports retry policies. Note that all transports can be configured with Retry policies, but only the ones marked here are officially supported by MuleSoft +
*MEPs* - Message Exchange Patterns supported by this transport +
*Default MEP* - The default MEP for endpoints that use this transport that do not explicitly configure a MEP +
*Maven Artifact* - The group name a artifact name for this transport in http://maven.apache.org/[Maven]
