mule-user-guide/v/3.8-beta/transports-reference.adoc
= Available Transports
:keywords: transports, providers, reference

Following is a list of known transports (also called "providers") for Mule ESB. Some functionality is contained within modules instead of transports--see link:/mule-user-guide/v/3.8-beta/modules-reference[Modules Reference]. For more information on transports, see the following topics:

* link:/mule-user-guide/v/3.8-beta/connecting-using-transports[About Transports]
* link:/mule-user-guide/v/3.8-beta/configuring-a-transport[Configuring a Transport]
* link:/mule-user-guide/v/3.8-beta/creating-transports[Creating Transports]

The following list includes prominent transports. Transports that are available only in Mule Enterprise are denoted by *_Enterprise_*.

Note that in Mule 3, CXF and Jersey are no longer classed as transports. They are now modules that use an underlying transport (for instance HTTP or HTTPS) to communicate between client and service.

== Mule Transports

[width="100%",cols="25a,75a",options="header"]
|===
|Transport |Description
|link:/mule-user-guide/v/3.8-beta/ajax-transport-reference[AJAX Transport] |The Mule AJAX connector allows Mule events to be sent and received asynchronously to and from the web browser
|link:/mule-user-guide/v/3.8-beta/ejb-transport-reference[EJB Transport] |Allows EJB invocations to be made using outbound endpoints.
|link:/mule-user-guide/v/3.8-beta/email-transport-reference[Email Transport] |This transport supplies various email connectivity options.
|link:/mule-user-guide/v/3.8-beta/file-transport-reference[File Transport] |This transport allows files to be read and written to directories on the local file system. The connector can be configured to filter the file it reads and the way files are written, such as whether binary output is used or the file is appended to.
|link:/mule-user-guide/v/3.8-beta/ftp-transport-reference[FTP Transport] |Allows files to be read from or written to a remote FTP server.
|link:/mule-user-guide/v/3.8-beta/deprecated-http-transport-reference[Deprecated HTTP Transport] |This transport supplies HTTP transport of Mule messages between applications and other Mule servers.
|link:/mule-user-guide/v/3.8-beta/https-transport-reference[HTTPS Transport] |A secure version of the HTTP transport.
|link:/mule-user-guide/v/3.8-beta/imap-transport-reference[IMAP Transport] |Connectivity to IMAP mail folders.
|link:/mule-user-guide/v/3.8-beta/imap-transport-reference[IMAPS Transport] |A secure version of the IMAP transport.
|link:/mule-user-guide/v/3.8-beta/jdbc-transport-reference[JDBC Transport] +
*_Enterprise_* |A transport for JDBC connectivity. Some of its features are available only in Mule Enterprise.
|link:/mule-user-guide/v/3.8-beta/jetty-transport-reference[Jetty Transport] |Provides support for exposing services over HTTP by embedding a light-weight Jetty server. For inbound endpoints only.
|link:/mule-user-guide/v/3.8-beta/jetty-ssl-transport[Jetty SSL Transport] |A secure version of the Jetty transport.
|link:/mule-user-guide/v/3.8-beta/jms-transport-reference[JMS Transport] |A Mule transport for JMS connectivity. Mule itself is not a JMS server but can use the services of any JMS 1.1 or 1.02b compliant server such as ActiveMQ and OpenJms, and commercial vendors such as Weblogic, SonicMQ, and more.
|link:https://www.mulesoft.com/exchange#!/ldap-integration-connector[LDAP Transport] |Allows you to send and receive Mule Messages to/from an LDAP directory. Now handled by the link:https://www.mulesoft.com/exchange#!/ldap-integration-connector[LDAP Connector].
|link:/mule-user-guide/v/3.8-beta/pop3-transport-reference[POP3 Transport] |Connectivity to POP3 inboxes.
|link:/mule-user-guide/v/3.8-beta/pop3-transport-reference[POP3S Transport] |A secure version of the POP3 transport.
|link:/mule-user-guide/v/3.8-beta/quartz-transport-reference[Quartz Transport] |Provides scheduling facilities with cron / interval definitions and allows Mule events to be scheduled/rescheduled.
|link:/mule-user-guide/v/3.8-beta/rmi-transport-reference[RMI Transport] |Enables events to be sent and received over RMI via JRMP.
|link:/mule-user-guide/v/3.8-beta/servlet-transport-reference[Servlet Transport] |Provides facilities for Mule components to listen for events received via a servlet request. There is also a servlet implementation that uses the Servlet transport to enable REST style services access. This transport is now bundled with the HTTP transport.
|link:/mule-user-guide/v/3.8-beta/smtp-transport-reference[SMTP Transport] |Connectivity to SMTP servers.
|link:/mule-user-guide/v/3.8-beta/smtp-transport-reference[SMTPS Transport] |A secure version of the SMTP transport.
|link:/mule-user-guide/v/3.8-beta/ssl-and-tls-transports-reference[SSL Transport] |Provides secure socket-based communication using SSL or TLS.
|link:/mule-user-guide/v/3.8-beta/stdio-transport-reference[STDIO Transport] |This transport provides connectivity to streams such as `System.in` and `System.out` and is useful for testing.
|link:/mule-user-guide/v/3.8-beta/tcp-transport-reference[TCP Transport] |Enables events to be sent and received over TCP sockets.
|link:/mule-user-guide/v/3.8-beta/ssl-and-tls-transports-reference[TLS Transport] |Provides secure socket-based communication using SSL or TLS.
|link:/mule-user-guide/v/3.8-beta/udp-transport-reference[UDP Transport] |Enables events to be sent and received as datagram packets.
|link:/mule-user-guide/v/3.8-beta/vm-transport-reference[VM Transport] |Enables event sending and receiving over VM, embedded memory, or persistent queues.
|link:/mule-user-guide/v/3.8-beta/mule-wmq-transport-reference[WebSphere MQ Transport] +
*_Enterprise_* |A Mule transport for WebSphere MQ. This transport is available with Mule Enterprise version 1.6 and later.
|link:/mule-user-guide/v/3.8-beta/wsdl-connectors[WSDL Connectors] |The link:/mule-user-guide/v/3.8-beta/cxf-module-reference[CXF Module] allows remote web services to be invoked using their WSDL contract.
|link:/mule-user-guide/v/3.8-beta/xmpp-transport-reference[XMPP Transport] |Provides connectivity over the XMPP (Jabber) instant messaging protocol.
|===

== Transport Matrix

[cols="15a,5a,5a,5a,5a,5a,5a,5a,10a,10a,20a",options="header"]
|===
|Name |Doc |I |O |Rq |Tr |St |Re |MEPs |Def MEP |Maven
|link:/mule-user-guide/v/3.8-beta/ajax-transport-reference[AJAX] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/ajax/package-summary.html[JD]
http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_ajax/namespace-overview.html[SD] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:error.png[error] |image:check.png[check] |image:error.png[error] |one-way |one-way |org.mule.transport:mule-transport-ajax
|link:/mule-user-guide/v/3.8-beta/file-transport-reference[File] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/file/package-summary.html[JD]
http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_file/namespace-overview.html[SD]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |one-way |one-way |org.mule.transport:mule-transport-file
|link:/mule-user-guide/v/3.8-beta/ftp-transport-reference[FTP]
|link:http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/ftp/package-summary.html[JD] link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_ftp/namespace-overview.html[SD]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |  |  |org.mule.transport:mule-transport-ftp
|link:/mule-user-guide/v/3.8-beta/https-transport-reference[HTTPS]
|link:http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/http/package-summary.html[JD]
http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_https/namespace-overview.html[SD]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |one-way, request-response |request-response |org.mule.transport:mule-transport-https
|link:/mule-user-guide/v/3.8-beta/jdbc-transport-reference[JDBC] |link:http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/jdbc/package-summary.html[JD]
link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_jdbc/namespace-overview.html[SD]
|image:error.png[error] |image:error.png[error] |image:error.png[error] |image:error.png[error] |image:error.png[error] |image:error.png[error] |  |  |org.mule.transport:mule-transport-jdbc-ee
|link:/mule-user-guide/v/3.8-beta/jetty-ssl-transport[Jetty SSL] | -
|image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |one-way, request-response |request-response |org.mule.transport:mule-transport-jetty-ssl
|link:/mule-user-guide/v/3.8-beta/multicast-transport-reference[Multicast] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/multicast/package-summary.html[JD]
http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_multicast/namespace-overview.html[SD]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:error.png[error] |image:error.png[error] |one-way, request-response |request-response |org.mule.transport:mule-transport-multicast
|link:/mule-user-guide/v/3.8-beta/pop3-transport-reference[POP3] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/email/package-summary.html[JD]
http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3s/namespace-overview.html[SD]
|image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |image:error.png[error] |image:error.png[error] |one-way |one-way |org.mule.transport:mule-transport-pop3s
|link:/mule-user-guide/v/3.8-beta/rmi-transport-reference[RMI] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/rmi/package-summary.html[JD]
http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_rmi/namespace-overview.html[SD]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:error.png[error] |image:error.png[error] |one-way, request-response |request-response |org.mule.transport:mule-transport-rmi
|link:/mule-user-guide/v/3.8-beta/sftp-transport-reference[SFTP]
|http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/sftp/package-summary.html[JD]
http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_sftp/namespace-overview.html[SD]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |one-way, request-response |one-way |org.mule.transport:mule-transport-sftp
|link:/mule-user-guide/v/3.8-beta/smtp-transport-reference[SMTP]
 |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/email/package-summary.html[JD]
http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_smtps/namespace-overview.html[SD]
|image:error.png[error] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:error.png[error] |image:error.png[error] |one-way |one-way |org.mule.transport:mule-transport-smtps
|link:/mule-user-guide/v/3.8-beta/stdio-transport-reference[STDIO] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/stdio/package-summary.html[JD]
http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_stdio/namespace-overview.html[SD]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |one-way |one-way |org.mule.transport:mule-transport-stdio
|link:/mule-user-guide/v/3.8-beta/ssl-and-tls-transports-reference[SSL and TLS] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/ssl/package-summary.html[JD]
http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_tls/namespace-overview.html[SD]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |one-way, request-response |request-response |org.mule.transport:mule-transport-tls
|link:/mule-user-guide/v/3.8-beta/vm-transport-reference[VM] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/vm/package-summary.html[JD]
http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_vm/namespace-overview.html[SD]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:check.png[check](XA) |image:check.png[check] |image:error.png[error] |one-way, request-response |one-way |org.mule.transport:mule-transport-vm
|===

== Legend

* *Name* - The name/protocol of the transport
* *Docs* - Links to the JavaDoc (JD) and SchemaDoc (SD) for the transport
* *Inbound* - (I) Whether the transport can receive inbound events and can be used for an inbound endpoint
* *Outbound* - (O) Whether the transport can produce outbound events and be used with an outbound endpoint
* *Request* - (Rq) Whether this endpoint can be queried directly with a request call (via MuleClient or the EventContext)
* *Transactions* - (Tr) Whether transactions are supported by the transport. Transports that support transactions can be configured in either local or distributed two-phase commit (XA) transaction.
* *Streaming* - (St) Whether this transport can process messages that come in on an input stream. This allows for very efficient processing of large data. For more information, see Streaming.
* *Retry* - (Re) Whether this transport supports retry policies. Note that all transports can be configured with Retry policies, but only the ones marked here are officially supported by MuleSoft
* *MEPs* - Message Exchange Patterns supported by this transport
* *Default MEP* - (Def MEPs) The default MEP for endpoints that use this transport that do not explicitly configure a MEP
* *Maven Artifact* - (Maven) The group name a artifact name for this transport in link:http://maven.apache.org/[Maven]
